--- a/package.json
+++ b/package.json
@@ -30,10 +30,14 @@
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "indicative": "^7.4.4",
+    "jquery": "^3.5.1",
+    "moment": "^2.27.0",
+    "momentjs": "^2.0.0",
     "mongodb": "^3.5.9",
     "morgan": "^1.10.0",
     "rxjs": "^6.6.0",
     "rxjs-compat": "^6.6.0",
+    "socket.io": "^2.3.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
@@ -41,9 +45,10 @@
     "@angular-devkit/build-angular": "~0.1000.1",
     "@angular/cli": "~10.0.1",
     "@angular/compiler-cli": "~10.0.2",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.0",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0-next.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
