changed subscription logic + clicking on a user opens a modal with the user's information

--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,12 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
-            "scripts": [ "./node_modules/jquery/dist/jquery.min.js" ]
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -118,6 +121,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "webchatroom"
 }
